--- a/spring-cloud/springcloud-api/pom.xml
+++ b/spring-cloud/springcloud-api/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>lombok</artifactId>
             <version>1.16.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
