--- a/spring-cloud/springcloud-consumer-feign/pom.xml
+++ b/spring-cloud/springcloud-consumer-feign/pom.xml
@@ -17,6 +17,19 @@
             <artifactId>springcloud-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- hystrix和 hystrix-dashboard相关-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <!-- Ribbon相关 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
